# museum-brute-force

./: .gitignore  Cargo.toml  README.md  puzzle.txt
src/: OldImplementation.csx  main.rs  tests.rs  vault.rs
